// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator dbml {
  provider            = "prisma-dbml-generator"
  outputName          = "punto10.dbml"
  projectName         = "punto 10 - industria textil"
  projectDatabaseType = "PostgreSQL"
  //https://dbdiagram.io/d
}

datasource db {
  provider = "postgresql"
  url      = "postgresql://postgres:postgres@lab.vitico.space:31132/ingsoft?schema=punto10"
}

model Trabajador {
  id       Int    @id
  nombre   String
  apellido String

  TrabajadorCapacidad TrabajadorCapacidad[]
  AsignacionTrabajdor AsignacionTrabajdor[]
  HorarioTrabajador   HorarioTrabajador[]
}

model Maquina {
  id               Int                @id
  nombre           String
  descripcion      String
  MaquinaCapacidad MaquinaCapacidad[]
  AreaMaquina      AreaMaquina[]
}

model MaquinaCapacidad {
  maquina     Maquina   @relation(fields: [maquinaId], references: [id])
  capacidad   Capacidad @relation(fields: [capacidadId], references: [id])
  maquinaId   Int
  capacidadId Int

  @@id([maquinaId, capacidadId])
}

model Capacidad {
  id                     Int                      @id
  nombre                 String
  descripcion            String
  MaquinaCapacidad       MaquinaCapacidad[]
  TrabajadorCapacidad    TrabajadorCapacidad[]
  EntrenamientoCapacidad EntrenamientoCapacidad[]
}

model EntrenamientoCapacidad {
  entrenamiento   Entrenamiento @relation(fields: [entrenamientoId], references: [id])
  capacidad       Capacidad     @relation(fields: [capacidadId], references: [id])
  entrenamientoId Int
  capacidadId     Int

  @@id([entrenamientoId, capacidadId])
}

model Entrenamiento {
  id                     Int                      @id
  nombre                 String
  descripcion            String
  EntrenamientoCapacidad EntrenamientoCapacidad[]
  duracionEnSegundos     Int
}

model TrabajadorCapacidad {
  trabajador   Trabajador @relation(fields: [trabajadorId], references: [id])
  capacidad    Capacidad  @relation(fields: [capacidadId], references: [id])
  trabajadorId Int
  capacidadId  Int

  @@id([trabajadorId, capacidadId])
}

model Area {
  id                  Int                   @id
  nombre              String
  descripcion         String
  AreaMaquina         AreaMaquina[]
  AsignacionTrabajdor AsignacionTrabajdor[]
}

model AreaMaquina {
  area      Area    @relation(fields: [areaId], references: [id])
  maquina   Maquina @relation(fields: [maquinaId], references: [id])
  areaId    Int
  maquinaId Int

  @@id([areaId, maquinaId])
}

enum EstadoAsignacion {
  Pendiente
  EnProceso
  Terminado
}

model AsignacionTrabajdor {
  id           Int        @id
  trabajador   Trabajador @relation(fields: [trabajadorId], references: [id])
  area         Area       @relation(fields: [areaId], references: [id])
  fechaInicio  DateTime
  fechaFin     DateTime
  trabajadorId Int
  areaId       Int

  estado            EstadoAsignacion
  HorarioAsignacion HorarioAsignacion[]
}

model Dia {
  id                Int                 @id
  nombre            String
  HorarioTrabajador HorarioTrabajador[]
  HorarioAsignacion HorarioAsignacion[]
}

model Horario {
  id         Int      @id
  nombre     String
  horaInicio DateTime
  horaFin    DateTime

  HorarioTrabajador HorarioTrabajador[]
  HorarioAsignacion HorarioAsignacion[]
}

model HorarioTrabajador {
  horario      Horario    @relation(fields: [horarioId], references: [id])
  trabajador   Trabajador @relation(fields: [trabajadorId], references: [id])
  dia          Dia        @relation(fields: [diaId], references: [id])
  horarioId    Int
  trabajadorId Int
  diaId        Int

  @@id([horarioId, trabajadorId, diaId])
}

model HorarioAsignacion {
  horario      Horario             @relation(fields: [horarioId], references: [id])
  asignacion   AsignacionTrabajdor @relation(fields: [asignacionId], references: [id])
  dia          Dia                 @relation(fields: [diaId], references: [id])
  horarioId    Int
  asignacionId Int
  diaId        Int

  @@id([horarioId, asignacionId, diaId])
}
